# pi-comentario

./: .gitmodules  README.md  TODO  Vagrantfile  pyproject.toml
ansible/: ansible.cfg  playbook.yml
ansible/inventories/local-development/: vagrant
ansible/roles/common/tasks/: main.yml
